syntax = "proto3";

package phi;
option go_package = "github.com/clstb/phi/proto";
import "google/protobuf/empty.proto";


message ProvisionTinkUserResponse {
  string ExternalUserId = 1;
  string TinkId = 2;
}

message StringMessage {
  string value = 1;
}

message BytesMessage {
  bytes arr = 1;
}

message BooleanFlagMessage {
  bool value = 1;
}


service TinkGWService {

  rpc ProvisionTinkUser (google.protobuf.Empty) returns (ProvisionTinkUserResponse);

  rpc GetTinkAuthLink (BooleanFlagMessage) returns (BytesMessage);

  rpc ExchangeAuthCodeToToken (StringMessage) returns (StringMessage);

}



